--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,20 +1,23 @@
 <div id="home">
   <div class="container">
     <div class="row">
-      <div class="col-8 offset-2">
-        <h1>TheraTune</h1>
+      <div class="col l8 offset-2">
+        <h1>Psyche</h1>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label>I'm Feeling ... </label>
-            <select>
-              <option value="happy">Happy</option>
-              <option value="sad">Sad</option>
-              <option value="mad">Mad</option>
-            </select>
+            <label>I'm Feeling...</label>
+            <div class="input-field col s12">
+              <select>
+                <option value="" disabled selected>Choose your playlist</option>
+                <option value="sad">Sad</option>
+                <option value="happy">Happy</option>
+                <option value="mad">Mad</option>
+              </select>
+            </div>
           </div>
           <button id="submit" class="btn btn-primary float-right">Search</button>
         </form>
-        <h3>Examples:</h3>
+        <h3>Results:</h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
           <li data-id="{{this.id}}" class="list-group-item">
@@ -26,6 +29,8 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
