--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,11 +2,13 @@
   <div class="container">
     <div class="row">
       <div class="col l8 offset-2">
-        <h1>Psyche</h1>
+        {{!-- Header --}}
+        <h1>TheraTune</h1>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label>I'm Feeling...</label>
             <div class="input-field col s12">
+              {{!-- Select --}}
               <select>
                 <option value="" disabled selected>Choose your playlist</option>
                 <option value="sad">Sad</option>
@@ -15,6 +17,7 @@
               </select>
             </div>
           </div>
+          {{!-- Search Button --}}
           <button id="submit" class="btn btn-primary float-right">Search</button>
         </form>
         <h3>Results:</h3>
