--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,34 +6,29 @@
         <h1>TheraTune</h1>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label>I'm Feeling...</label>
             <div class="input-field col s12">
-              {{!-- Select --}}
+              {{!-- Select an Emotion --}}
               <select>
-                <option value="" disabled selected>Choose your playlist</option>
+                <option value="" disabled selected>I'm Feeling...</option>
                 <option value="sad">Sad</option>
                 <option value="happy">Happy</option>
                 <option value="mad">Mad</option>
               </select>
             </div>
+            <div class="input-field col s12">
+              {{!-- Search By Artist --}}
+              <textarea id="textarea1" class="materialize-textarea"></textarea>
+              <label for="textarea1">Search by Artist</label>
+            </div>
           </div>
           {{!-- Search Button --}}
           <button id="submit" class="btn btn-primary float-right">Search</button>
         </form>
-        <h3>Results:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
       </div>
     </div>
+    <h3>Results:</h3>
+      {{!-- Display Input Here --}}
   </div>
-</div>
-
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
