bk--added front end JS to display song information on the page.mostly testing to make sure we can get some display

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,12 +22,14 @@
             </div>
           </div>
           {{!-- Search Button --}}
-          <button id="submit" class="btn btn-primary float-right">Search</button>
+          <button id="submitArtist" class="btn btn-primary float-right">Search</button>
         </form>
       </div>
     </div>
     <h3>Results:</h3>
+    <div id="resultsArea">
       {{!-- Display Input Here --}}
+    </div>
   </div>
 </div>
 
