--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,16 @@
 .list-group-item {
   line-height: 2.5;
 }
+/* Menu Icon */
+.hamburger {
+  display: inline-block;
+  cursor: pointer;
+}
+/* Bars for the Menu Icon */
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
