--- a/views/layouts/sidenav.handlebars
+++ b/views/layouts/sidenav.handlebars
@@ -1,18 +1,33 @@
-<p>Hello!!!!!!!!!!</p>
+<!-- NavBar Content -->
+    <nav></nav>
+    <!-- SideNav Slideout -->
+    <a href="#" data-target="slide-out" class="sidenav-trigger">
+        <!-- Menu Icon -->
+        <div class="hamburger" onclick="myFunction(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+    </a>
 
-{{!-- Materialize Sidenav --}}
-<ul id="slide-out" class="sidenav">
-    <li><div class="user-view">
-      <div class="background">
-        <img src="images/office.jpg">
-      </div>
-      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-      <a href="#name"><span class="white-text name">John Doe</span></a>
-      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
-    </div></li>
-    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-    <li><a href="#!">Second Link</a></li>
-    <li><div class="divider"></div></li>
-    <li><a class="subheader">Subheader</a></li>
-    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-</ul>
+    <!-- SideNav Content -->
+    <ul id="slide-out" class="sidenav">
+        <li>
+            <div class="user-view">
+                <div class="background">
+                    <img src="images/office.jpg">
+                </div>
+                <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
+                <a href="#name">Jane Doe</a>
+            </div>
+        </li>
+        <li><a class="waves-effect"href="#!">My Account</a></li>
+        <li><div class="divider"></div></li>
+        <!-- Find Better Solution -->
+        <div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
+
+        <li><a class="waves-effect" href="#!">Login</a></li>
+        <li><a class="waves-effect" href="#!">Create an Account</a></li>
+    </ul>
