--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
 <div id="home">
   <div class="container">
+    {{sidenav}}
     <div class="row">
       <div class="col l8 offset-2">
         {{!-- Header --}}
