updated sidenav path

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
+{{>sidenav/sidenav}}
 <div id="home">
   <div class="container">
-    {{sidenav}}
     <div class="row">
       <div class="col l8 offset-2">
         {{!-- Header --}}
