creating a modal and path for a 'create an account' form

--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -26,6 +26,11 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
   </div>
 
-  <li><a class="waves-effect" href="#!">Login</a></li>
-  <li><a class="waves-effect" href="#!">Create an Account</a></li>
+  	<li>
+		<a class="waves-effect" href="#!">Login</a>
+	</li>
+    <li>
+        <a class="waves-effect waves-light modal-trigger" href="#modal1">Create Account</a>
+    </li>
 </ul>
+{{>createAccount/createAccount}}
