JR--creating a modal and path for a 'login' form

--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -27,10 +27,11 @@
   </div>
 
   	<li>
-		<a class="waves-effect" href="#!">Login</a>
+		<a class="waves-effect waves-light modal-trigger login" href="#modal2">Login</a>
 	</li>
     <li>
         <a class="waves-effect waves-light modal-trigger" href="#modal1">Create Account</a>
     </li>
 </ul>
 {{>createAccount/createAccount}}
+{{>login/login}}
