--- a/views/partials/createAccount/createAccount.handlebars
+++ b/views/partials/createAccount/createAccount.handlebars
@@ -8,17 +8,17 @@
             <form class="col s12">
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
+                        <input id="firstName" type="text" class="validate">
                         <label for="last_name">First Name</label>
                     </div>
                     <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
+                        <input id="lastName" type="text" class="validate">
                         <label for="last_name">Last Name</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea id="textarea" class="materialize-textarea" data-length="15"></textarea>
+                        <textarea id="username" class="materialize-textarea" data-length="15"></textarea>
                         <label for="textarea2">Username</label>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="password" type="password" class="validate confirmPassword">
+                        <input id="password2" type="password" class="validate">
                         <label for="password">Confirm Password</label>
                     </div>
                 </div>
