bk--minor changes

--- a/views/partials/login/login.handlebars
+++ b/views/partials/login/login.handlebars
@@ -21,7 +21,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Login</a>
+                <a href="#!" id="submitLogin" class="modal-close waves-effect waves-green btn-flat">Login</a>
             </div>
         </div>
     </div>
