--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -1,7 +1,7 @@
 <!-- SideNav Slideout -->
 <a href="#" data-target="slide-out" class="sidenav-trigger">
   <!-- Menu Icon -->
-  <div class="hamburger" onclick="myFunction(this)">
+  <div class="hamburger">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
