changing the textarea search for artist to an input in order to press enter and search

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,8 +18,8 @@
             </div>
             <div class="input-field col s12">
               {{!-- Search By Artist --}}
-              <textarea id="textarea1" class="materialize-textarea"></textarea>
-              <label for="textarea1">Search by Artist</label>
+              <input id="searchArtist" type="text">
+              <label for="searchArtist">Search by Artist</label>
             </div>
           </div>
           {{!-- Search Button --}}
@@ -27,9 +27,6 @@
         </form>
       </div>
     </div>
-    <textarea id="username"></textarea>
-    <textarea id="password"></textarea>
-    <button id="subLog">submit</button>
     <h3>Results:</h3>
     <div id="resultsArea">
       {{!-- Display Input Here --}}
