JR--centered form for song lookup and added btn class to equate button styles

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 <div id="home">
   <div class="container">
     <div class="row">
-      <div class="col l8 offset-2">
+      <div class="col l6 offset-l2">
         {{!-- Header --}}
         <h1>TheraTune</h1>
         <form class="clearfix mb-4" action="POST">
@@ -27,10 +27,7 @@
         </form>
       </div>
     </div>
-    <h3>Results:</h3>
-    <div id="resultsArea">
-      {{!-- Display Input Here --}}
-    </div>
+    <div id="resultsArea">{{!-- Display Results Here --}}</div>
   </div>
 </div>
 
