--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -10,7 +10,21 @@
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
-  background-color: #333;
+  background-color: #008B8B;
   margin: 6px 0;
   transition: 0.4s;
+}
+.searchForm{
+  padding: 65px;
+  border-style: double;
+  border-color: #008B8B;
+  border-width: 10px;
+}
+.songnameH{
+  color:white;
+  border-bottom: 3px solid #008B8B;
+  background-color: rgb(227, 231, 235);
+}
+.songAdder{
+  margin: 5px;
 }
