--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
       <div class="col l6 offset-l2">
         {{!-- Header --}}
         <h1>TheraTune</h1>
-        <form class="clearfix mb-4" action="POST">
+        <form class="clearfix mb-4 searchForm" action="POST">
           <div class="form-group">
             <div class="input-field col s12">
               {{!-- Select an Emotion --}}
@@ -27,7 +27,11 @@
         </form>
       </div>
     </div>
-    <div id="resultsArea">{{!-- Display Results Here --}}</div>
+    <div class="row">
+      <div class="col l6 offset-l2">
+        <div id="resultsArea">{{!-- Display Results Here --}}</div>
+      </div>
+    </div>
   </div>
 </div>
 
