--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -16,7 +16,7 @@
         <img src="images/office.jpg">
       </div>
       <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-      <a href="#name">Jane Doe</a>
+      <p for="#name">Jane Doe</p>
     </div>
   </li>
   <li><a class="waves-effect"href="#!">My Account</a></li>
