removed handlebars 'myAccount' and 'myCommunit'

--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -20,6 +20,7 @@
     </div>
   </li>
   <li><a class="waves-effect"href="#!">My Account</a></li>
+  <li><a class="waves-effect"href="#!">My Community</a></li>
   <li><div class="divider"></div></li>
   <!-- Find Better Solution -->
   <div>
