--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -19,20 +19,26 @@
       <p for="#name">Jane Doe</p>
     </div>
   </li>
+  {{!-- Divider --}}
+  <li><div class="divider"></div></li>
   <li><a class="waves-effect"href="#!">My Account</a></li>
   <li><a class="waves-effect"href="#!">My Community</a></li>
-  <li><div class="divider"></div></li>
-  <!-- Find Better Solution -->
   <div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br>
   </div>
-
-  	<li>
+  <li><a class="waves-effect"href="#!">Happy Playlist</a></li>
+  <li><a class="waves-effect"href="#!">Sad Playlist</a></li>
+  <li><a class="waves-effect"href="#!">Mad Playlist</a></li>
+  {{!-- FIND BETTER SOLUTION --}}
+  <div>
+    <br><br><br><br><br>
+  </div>
+  <li>
 		<a class="waves-effect waves-light modal-trigger login" href="#modal2">Login</a>
 	</li>
-    <li>
-        <a class="waves-effect waves-light modal-trigger" href="#modal1">Create Account</a>
-    </li>
+  <li>
+    <a class="waves-effect waves-light modal-trigger" href="#modal1">Create Account</a>
+  </li>
 </ul>
 {{>createAccount/createAccount}}
 {{>login/login}}
