handlebars pages: account, community, and playlists

--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -19,20 +19,18 @@
       <p for="#name">Jane Doe</p>
     </div>
   </li>
+  {{!-- Account --}}
+  <li><a class="waves-effect"href="#!">Account</a></li>
   {{!-- Divider --}}
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect"href="#!">My Account</a></li>
-  <li><a class="waves-effect"href="#!">My Community</a></li>
-  <div>
-    <br><br><br>
-  </div>
-  <li><a class="waves-effect"href="#!">Happy Playlist</a></li>
-  <li><a class="waves-effect"href="#!">Sad Playlist</a></li>
-  <li><a class="waves-effect"href="#!">Mad Playlist</a></li>
-  {{!-- FIND BETTER SOLUTION --}}
-  <div>
-    <br><br><br><br><br>
-  </div>
+  {{!-- Playlists --}}
+  <li><a class="waves-effect"href="#!">Playlists</a></li>
+  {{!-- Community --}}
+  <li><a class="waves-effect"href="#!">Community</a></li>
+  
+  <br><br><br><br><br><br><br><br><br>
+  <br>
+
   <li>
 		<a class="waves-effect waves-light modal-trigger login" href="#modal2">Login</a>
 	</li>
