--- a/views/playlists.handlebars
+++ b/views/playlists.handlebars
@@ -1,1 +1,42 @@
-<p>PLAYLISTS</p>
+</head>
+  <body><div id="blue" class="block blue">
+  <nav class="pushpin-demo-nav" data-target="blue">
+    <div class="nav-wrapper light-blue">
+      <div class="container">
+        <a href="#" class="brand-logo">Sad</a>
+      </div>
+    </div>
+  </nav>
+</div>
+
+<div id="red" class="block red lighten-1">
+  <nav class="pushpin-demo-nav" data-target="red">
+    <div class="nav-wrapper red">
+      <div class="container">
+        <a href="#" class="brand-logo">Mad</a>
+      </div>
+    </div>
+  </nav>
+</div>
+
+<div id="green" class="block green lighten-1">
+  <nav class="pushpin-demo-nav" data-target="green">
+    <div class="nav-wrapper green">
+      <div class="container">
+        <a href="#" class="brand-logo">Happy</a>
+      </div>
+    </div>
+  </nav>
+</div>
+
+<style>
+    html, body, .block {
+        height: 100%;
+    }
+    nav ul li a:hover, nav ul li a.active {
+        background-color: rgba(0,0,0,.1);
+    }
+    footer {
+        padding-left: 0;
+    }
+</style>
