creating a space to insert user data into playlistsHB and creating the appropriate href

--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -20,13 +20,13 @@
     </div>
   </li>
   {{!-- Account --}}
-  <li><a class="waves-effect"href="#!">Account</a></li>
+  <li><a class="waves-effect"href="/account">Account</a></li>
   {{!-- Divider --}}
   <li><div class="divider"></div></li>
   {{!-- Playlists --}}
-  <li><a class="waves-effect"href="#!">Playlists</a></li>
+  <li><a class="waves-effect"href="/playlists">Playlists</a></li>
   {{!-- Community --}}
-  <li><a class="waves-effect"href="#!">Community</a></li>
+  <li><a class="waves-effect"href="/community">Community</a></li>
   
   <br><br><br><br><br><br><br><br><br>
   <br>
