--- a/views/playlists.handlebars
+++ b/views/playlists.handlebars
@@ -6,6 +6,7 @@
         <a href="#" class="brand-logo">Sad</a>
       </div>
     </div>
+    {{!-- Show User's Sad Songs Here --}}
   </nav>
 </div>
 
@@ -16,6 +17,7 @@
         <a href="#" class="brand-logo">Mad</a>
       </div>
     </div>
+    {{!-- Show User's Mad Songs Here --}}
   </nav>
 </div>
 
@@ -26,6 +28,7 @@
         <a href="#" class="brand-logo">Happy</a>
       </div>
     </div>
+    {{!-- Show User's Happy Songs Here --}}
   </nav>
 </div>
 
