adding sidenav handlebar to pages: account, community, and playlists

--- a/views/playlists.handlebars
+++ b/views/playlists.handlebars
@@ -1,5 +1,5 @@
-</head>
-  <body><div id="blue" class="block blue">
+{{>sidenav/sidenav}}
+<div id="blue" class="block blue">
   <nav class="pushpin-demo-nav" data-target="blue">
     <div class="nav-wrapper light-blue">
       <div class="container">
