adding a home link on the sidebar

--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -23,13 +23,14 @@
   <li><a class="waves-effect"href="/account">Account</a></li>
   {{!-- Divider --}}
   <li><div class="divider"></div></li>
+  {{!-- Home --}}
+  <li><a class="waves-effect"href="/">Home</a></li>
   {{!-- Playlists --}}
   <li><a class="waves-effect"href="/playlists">Playlists</a></li>
   {{!-- Community --}}
   <li><a class="waves-effect"href="/community">Community</a></li>
   
-  <br><br><br><br><br><br><br><br><br>
-  <br>
+  <br><br><br><br><br>
 
   <li>
 		<a class="waves-effect waves-light modal-trigger login" href="#modal2">Login</a>
