--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,6 +34,11 @@
     </div>
   </div>
 </div>
+{{#if checkForSession}}
+{{>createAccount/createAccount}}
+{{/if}}
+{{!-- {{>login/login}} --}}
+
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
