bk -- adding in a welcome message, customized by the user's first name. if no user, general create account/login message

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,6 +5,7 @@
       <div class="col l6 offset-l2">
         {{!-- Header --}}
         <h1>TheraTune</h1>
+        <h5 id="welcome"></h5>
         <form class="clearfix mb-4 searchForm" action="POST">
           <div class="form-group">
             <div class="input-field col s12">
