--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,1 +1,5 @@
 <p>ACCOUNT</p>
+
+<div id="test"></div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/account.js"></script>
