--- a/views/playlists.handlebars
+++ b/views/playlists.handlebars
@@ -1,1 +1,14 @@
+{{>sidenav/sidenav}}
 <p>PLAYLISTS</p>
+<div id="test"></div>
+<div id="happy">
+<h3>Happy</h3>
+</div>
+<div id="sad">
+<h3>Sad</h3>
+</div>
+<div id="mad">
+<h3>Mad</h3>
+</div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/playlists.js"></script>
