--- a/views/playlists.handlebars
+++ b/views/playlists.handlebars
@@ -1,4 +1,6 @@
-{{>sidenav/sidenav}}
+<div class="snPlaylistsHB">
+    {{>sidenav/sidenav}}
+</div>
 <div id="blue" class="block blue">
   <nav class="pushpin-demo-nav" data-target="blue">
     <div class="nav-wrapper light-blue">
