--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -10,8 +10,8 @@
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
-  background-color: #008B8B;
-  margin: 6px 0;
+  background-color: black;
+  margin: 6px;
   transition: 0.4s;
 }
 .searchForm{
@@ -25,9 +25,12 @@
   border-color: #008B8B;
   border-width: 3px;
 }
+.snPlaylistsHB{
+  background-color:rgb(3,169,244);
+}
 .songnameH{
   color:black;
-  border-bottom: 3px solid #008B8B;
+  border-bottom: 3px solid #2196f3;
   background-color: rgb(227, 231, 235);
 }
 .songAdderbtn, .btn{
