button change to form

--- a/views/partials/createAccount/createAccount.handlebars
+++ b/views/partials/createAccount/createAccount.handlebars
@@ -34,11 +34,8 @@
                         <label for="password">Confirm Password</label>
                     </div>
                 </div>
+                <button class="modal-close waves-effect btn-flat btn" id="createAccount"> Create</button>
             </form>
-        </div>
-
-        <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat" id="createAccount">Create</a>
         </div>
     </div>
 </div>
