--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,15 +5,13 @@
 .hamburger {
   display: inline-block;
   cursor: pointer;
-  margin-top: 5px;
-  margin-left: 10px;
 }
 /* Bars for the Menu Icon */
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
-  background-color: #008B8B;
-  margin: 6px 0;
+  background-color: black;
+  margin: 6px;
   transition: 0.4s;
 }
 .searchForm{
@@ -27,33 +25,23 @@
   border-color: #008B8B;
   border-width: 3px;
 }
+.snPlaylistsHB{
+  background-color:rgb(3,169,244);
+}
 .songnameH{
   color:black;
-  border-bottom: 3px solid #008B8B;
+  border-bottom: 3px solid #2196f3;
   background-color: rgb(227, 231, 235);
 }
-.songAdder{
-  position: relative;
-  left: 15px;
-  bottom: 35px;
+.songAdderbtn, .btn{
+  margin: 5px;
 }
-.songDelete{
-  position: relative;
-  left: 15px;
-  bottom: 35px;
-  background: red;
-  transition: 0.2s;
-}
-.songDelete:hover {
-  background: darkred;
-}
-.songContainer {
+/* .songContainer {
   margin-top: 5px;
   border-radius: 5px;
   transition: 0.3s;
 }
-
 .songContainer:hover {
   border-left: 3px solid #008B8B;
   background: lightgray;
-}
+} */
