adding the sidenav to the account handlebar

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,5 +1,7 @@
+{{>sidenav/sidenav}}
 <p>ACCOUNT</p>
 
 <div id="test"></div>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/account.js"></script>
+
+{{!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/account.js"></script> --}}
