adding a card for login on index handlebar

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -20,11 +20,11 @@
   border-color: #008B8B;
   border-width: 10px;
 }
-#modal1, #modal2{
+/* #modal1, #modal2{
   border-style: solid;
   border-color: #008B8B;
   border-width: 3px;
-}
+} */
 .snPlaylistsHB{
   background-color:rgb(3,169,244);
 }
@@ -35,6 +35,14 @@
 }
 .songAdderbtn, .btn{
   margin: 5px;
+}
+.card{
+  height: 250px;
+  width: 250px;
+  border-style: double;
+  border-color: #008B8B;
+  border-width: 10px;
+  float: left;
 }
 /* .songContainer {
   margin-top: 5px;
