--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,6 @@
       <div class="col l6 offset-l2">
         {{!-- Header --}}
         <h1>TheraTune</h1>
-        <h5 id="welcome"></h5>
         <form class="clearfix mb-4 searchForm" action="POST">
           <div class="form-group">
             <div class="input-field col s12">
@@ -26,6 +25,18 @@
           {{!-- Search Button --}}
           <button id="submitArtist" class="btn btn-primary float-right">Search</button>
         </form>
+      </div>
+      <div class="col l1">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Login Here</span>
+              <p id="welcome"></p>
+          </div>
+          <div class="card-action">
+		        <a class="waves-effect waves-light modal-trigger login" href="#modal2">Login</a>
+            <a class="waves-effect waves-light modal-trigger" href="#modal1">Create</a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row">
