--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,5 +1,17 @@
 {{>sidenav/sidenav}}
-<p>ACCOUNT</p>
+<div class="row">
+    <div class="col l5 offset-l2">
+        <div class="card card2">
+            <div class="card-content">
+                <span class="card-title">
+                Account of
+                <div id="test"></div>
+                </span>
+                {{!-- <p>Bio...</p> --}}
+            </div>
+        </div>
+    </div>
+</div>
 
 <div id="test"></div>
 
