--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
         </form>
       </div>
       <div class="col l1">
-        <div class="card">
+        <div class="card card1">
           <div class="card-content">
             <span class="card-title">Login Here</span>
               <p id="welcome"></p>
