float left for card1

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -34,7 +34,7 @@
   border-style: double;
   border-color: #008B8B;
   border-width: 10px;
-  float: right;
+  float: left;
 }
 .card2{
   height: 500px;
