--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -13,10 +13,9 @@
   <li>
     <div class="user-view">
       <div class="background">
-        <img src="images/office.jpg">
       </div>
-      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-      <p for="#name">Jane Doe</p>
+      <a href="/"><img class="circle" src="../image/theratune.png"></a>
+      <p id="navName"></p>
     </div>
   </li>
   {{!-- Account --}}
