--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -1,6 +1,6 @@
 {{>sidenav/sidenav}}
 <p>COMMUNITY</p>
 <div id="test"></div>
-<div id="songs"></div>
+<div id="songsComm"></div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/community.js"></script>
