updates with changes from master

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,5 +1,19 @@
-<p>ACCOUNT</p>
+{{>sidenav/sidenav}}
+<div class="row">
+    <div class="col l5 offset-l2">
+        <div class="card card2">
+            <div class="card-content">
+                <span class="card-title">
+                Account of
+                <div id="test"></div>
+                </span>
+                {{!-- <p>Bio...</p> --}}
+            </div>
+        </div>
+    </div>
+</div>
 
 <div id="test"></div>
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/account.js"></script>
