--- a/views/partials/sidenav/sidenav.handlebars
+++ b/views/partials/sidenav/sidenav.handlebars
@@ -13,23 +13,25 @@
   <li>
     <div class="user-view">
       <div class="background">
+        <img src="images/office.jpg">
       </div>
-      <a href="/"><img class="circle" src="../image/theratune.png"></a>
-      <p id="navName"></p>
+      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
+      <p for="#name">Jane Doe</p>
     </div>
   </li>
   {{!-- Account --}}
-  <li><a class="waves-effect"href="#!">Account</a></li>
+  <li><a class="waves-effect"href="/account">Account</a></li>
   {{!-- Divider --}}
   <li><div class="divider"></div></li>
+  {{!-- Home --}}
+  <li><a class="waves-effect"href="/">Home</a></li>
   {{!-- Playlists --}}
-  <li><a class="waves-effect" id="playlistsButton">Playlists</a></li>
+  <li><a class="waves-effect"href="/playlists">Playlists</a></li>
   {{!-- Community --}}
   <li><a class="waves-effect"href="/community">Community</a></li>
-  
-  <br><br><br><br><br><br><br><br><br>
-  <br>
 
+  <br><br><br><br><br><br><br>
+  
   <li>
 		<a class="waves-effect waves-light modal-trigger login" href="#modal2">Login</a>
 	</li>
