--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,15 +5,13 @@
 .hamburger {
   display: inline-block;
   cursor: pointer;
-  margin-top: 5px;
-  margin-left: 10px;
 }
 /* Bars for the Menu Icon */
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
-  background-color: #008B8B;
-  margin: 6px 0;
+  background-color: black;
+  margin: 6px;
   transition: 0.4s;
 }
 .searchForm{
@@ -22,38 +20,32 @@
   border-color: #008B8B;
   border-width: 10px;
 }
-#modal1, #modal2{
-  border-style: solid;
-  border-color: #008B8B;
-  border-width: 3px;
-}
 .songnameH{
   color:black;
-  border-bottom: 3px solid #008B8B;
+  border-bottom: 3px solid #2196f3;
   background-color: rgb(227, 231, 235);
 }
-.songAdder{
-  position: relative;
-  left: 15px;
-  bottom: 35px;
+.songAdderbtn, .btn{
+  margin: 5px;
 }
-.songDelete{
-  position: relative;
-  left: 15px;
-  bottom: 35px;
-  background: red;
-  transition: 0.2s;
+.card1{
+  height: 250px;
+  width: 250px;
+  border-style: double;
+  border-color: #008B8B;
+  border-width: 10px;
+  float: left;
 }
-.songDelete:hover {
-  background: darkred;
+.card2{
+  height: 500px;
+  width: 500px;
+  border-style: double;
+  border-color: #008B8B;
+  border-width: 10px;
+  float: right;
 }
-.songContainer {
-  margin-top: 5px;
-  border-radius: 5px;
-  transition: 0.3s;
-}
-
-.songContainer:hover {
-  border-left: 3px solid #008B8B;
-  background: lightgray;
+.card3{
+  border-style: double;
+  border-color: #008B8B;
+  border-width: 10px;
 }
