--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -1,6 +1,11 @@
-{{>sidenav/sidenav}}
-<p>COMMUNITY</p>
-<div id="test"></div>
 <div id="songs"></div>
+
+{{>sidenav/sidenav}}
+<div class="collection with-header">
+    <h4 class="collection-header">Community Tunes</h4>
+    {{!-- <a href="#!" class="collection-item">Alvin</a> --}}
+    <div id="test"></div>
+</div>
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/community.js"></script>
