--- a/views/playlists.handlebars
+++ b/views/playlists.handlebars
@@ -1,14 +1,75 @@
 {{>sidenav/sidenav}}
-<p>PLAYLISTS</p>
-<div id="test"></div>
-<div id="happy">
-<h3>Happy</h3>
+<div class="block pushpin-demo-nav">
+  <div class="row">
+    <div class="col l6 offset-l2">
+      <div class="card card2">
+        <div class="card-content">
+          <span class="card-title">
+            The Playlists of
+            <div id="test"></div>
+          </span>
+          {{!-- <p>Bio...</p> --}}
+        </div>
+        <div class="card-action">
+          <a href="#sad">Sad Playlist</a>
+          <a href="#mad">Mad Playlist</a>
+          <a href="#happy">Happy Playlist</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<div id="sad">
-<h3>Sad</h3>
+
+{{!-- Sad Playlist --}}
+<div id="blue" class="block blue">
+  <nav class="pushpin-demo-nav" data-target="blue">
+    <div class="nav-wrapper light-blue">
+      <div class="container">
+        <a href="#" class="brand-logo">Sad</a>
+      </div>
+    </div>
+    <div id="sad">
+        {{!-- Show User's Sad Songs Here --}} 
+    </div>
+  </nav>
 </div>
-<div id="mad">
-<h3>Mad</h3>
+{{!-- Mad Playist --}}
+<div id="red" class="block red lighten-1 madfind">
+  <nav class="pushpin-demo-nav" data-target="red">
+    <div class="nav-wrapper red">
+      <div class="container">
+        <a href="#" class="brand-logo">Mad</a>
+      </div>
+    </div>
+    <div id="mad">
+        {{!-- Show User's Mad Songs Here --}}
+    </div>
+  </nav>
 </div>
+{{!-- Happy Playlist --}}
+<div id="green" class="block green lighten-1 happyfind">
+  <nav class="pushpin-demo-nav" data-target="green">
+    <div class="nav-wrapper green">
+      <div class="container">
+        <a href="#" class="brand-logo">Happy</a>
+      </div>
+    </div>
+    <div id="happy">
+        {{!-- Show User's Happy Songs Here --}}
+    </div>
+  </nav>
+</div>
+
+<style>
+    html, body, .block {
+        height: 100%;
+    }
+    nav ul li a:hover, nav ul li a.active {
+        background-color: rgba(0,0,0,.1);
+    }
+    footer {
+        padding-left: 0;
+    }
+</style>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/playlists.js"></script>
